# multimedia_audio_framework

./: 1.patch  BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  accessibility.gni  audio_framework.versionscript  audio_ohcore.gni  bluetooth_part.gni  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml  multimedia_aafwk.gni  ohos.build  ressche_part.gni  sensor.gni  temp1.patch  window_manager.gni
frameworks/innerkitsimpl/audiorenderer/: BUILD.gn
frameworks/innerkitsimpl/audiorenderer/include/: audio_renderer_private.h  audio_renderer_sink.h  audio_renderer_sink_intf.h
frameworks/innerkitsimpl/audiorenderer/src/: audio_renderer.cpp  audio_renderer_sink.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/asrcontroller/: napi_asr_processing_controller.cpp  napi_asr_processing_controller.h
frameworks/js/napi/audiocapturer/: napi_audio_capturer.cpp  napi_audio_capturer.h
frameworks/js/napi/audiomanager/: napi_audio_interrupt_manager.cpp  napi_audio_interrupt_manager.h  napi_audio_manager.h  (+13 more)
frameworks/native/audioadapter/: BUILD.gn
frameworks/native/audiocapturer/: BUILD.gn
frameworks/native/audiocompatibility/: BUILD.gn
frameworks/native/audioeffect/: BUILD.gn
frameworks/native/audiopolicy/: BUILD.gn
frameworks/native/audiorenderer/: BUILD.gn
frameworks/native/audioutils/: BUILD.gn
frameworks/native/bluetoothclient/: BUILD.gn  audio_bluetooth_manager.cpp  audio_bluetooth_manager.h  bluetooth_a2dp_audio_src_observer_stub.cpp  bluetooth_a2dp_audio_src_observer_stub.h  bluetooth_a2dp_src_observer.cpp  bluetooth_a2dp_src_observer.h  bluetooth_device_manager.cpp  bluetooth_device_manager.h  bluetooth_device_utils.h
frameworks/native/libsnd/: BUILD.gn
frameworks/native/ohaudio/: BUILD.gn  OHAudioCapturer.cpp  OHAudioCapturer.h  OHAudioDeviceDescriptor.cpp  OHAudioDeviceDescriptor.h  OHAudioRenderer.cpp  OHAudioRenderer.h  OHAudioRoutingManager.cpp  OHAudioRoutingManager.h  OHAudioSessionManager.cpp  OHAudioSessionManager.h  OHAudioStreamBuilder.cpp  OHAudioStreamBuilder.h
frameworks/native/opensles/: BUILD.gn
frameworks/native/playbackcapturer/: BUILD.gn
frameworks/native/systemsound/: BUILD.gn  audio_ringtone_manager.cpp  audio_ringtone_manager.h
frameworks/native/toneplayer/: BUILD.gn
interfaces/kits/c/: BUILD.gn  ohaudio.ndk.json
pulseaudio/: BUILD.gn  ohos_paconfig.sh
pulseaudio/include/: config.h
pulseaudio/include/pulse/: version.h
pulseaudio/src/: BUILD.gn
pulseaudio/src/daemon/: BUILD.gn  ohos_daemon-conf.c  ohos_pa_main.c
pulseaudio/src/modules/: BUILD.gn
pulseaudio/src/pulse/: BUILD.gn
pulseaudio/src/pulsecore/: BUILD.gn  ltdl-stub.c
pulseaudio/src/utils/: BUILD.gn
services/: BUILD.gn
services/audio_policy/: BUILD.gn
services/audio_policy/etc/: audio_config.para  audio_config.para.dac  audio_policy.cfg  audio_policy.rc
services/audio_service/: BUILD.gn
services/audio_service/etc/: audio_server.cfg  pulseaudio.cfg  pulseaudio.rc
services/etc/: audio_policy.cfg  audio_policy.rc  audio_service.rc  pulseaudio.cfg  pulseaudio.rc
services/include/: audio_device_descriptor.h  audio_error.h  audio_manager_base.h
services/include/client/: audio_manager_proxy.h  audio_ringtone_manager.h  audio_service_client.h  audio_timer.h
services/include/server/: audio_server.h
services/src/: audio_device_descriptor.cpp
services/src/client/: audio_manager_proxy.cpp  audio_ringtone_manager.cpp  audio_service_client.cpp  audio_session.cpp  audio_stream.cpp  audio_svc_manager.cpp  audio_system_manager.cpp
services/src/server/: audio_manager_stub.cpp  audio_server.cpp
services/test/: audio_capturer_test.cpp  audio_interrupt_test.cpp  audio_interrupt_test.h  audio_multichannel_test.cpp  audio_opensles_capture_test.cpp  audio_opensles_test.cpp  audio_policy_test.cpp  audio_recorder_test.cpp  audio_render_mode_callback_test.cpp  audio_renderer_test.cpp  audio_voip_test.cpp  interrupt_multi_renderer_test.cpp  interrupt_multi_renderer_test.h  pcm2wav.h  playback_test.cpp  record_test.cpp
test/: BUILD.gn
test/benchmarktest/audiocapturer/: BUILD.gn  benchmark_audiocapturer_test.cpp
test/benchmarktest/audiomanager/: BUILD.gn  benchmark_audiomanager_test.cpp
test/benchmarktest/audiorenderer/: BUILD.gn  benchmark_audiorenderer_test.cpp
test/demo/: README_en.md  README_zh.md  build-profile.json5  hvigorfile.ts  hvigorw.bat  package-lock.json  package.json
test/demo/AppScope/: app.json5
test/demo/entry/: build-profile.json5  package-lock.json  package.json
test/fuzztest/audiobluetoothmanager_fuzzer/: BUILD.gn  audiobluetoothmanager_fuzzer.cpp
test/fuzztest/audiointerruptservice_fuzzer/: BUILD.gn  audio_interrupt_service_fuzzer.cpp
test/fuzztest/audiomanager_fuzzer/: BUILD.gn  audio_manager_fuzzer.cpp  audio_manager_fuzzer.h
test/fuzztest/audiopolicy_fuzzer/: BUILD.gn  audio_policy_fuzzer.cpp
test/fuzztest/audiopolicyanother_fuzzer/: BUILD.gn  audio_policy_another_fuzzer.cpp
test/fuzztest/audioserver_fuzzer/: BUILD - 副本.gn  BUILD.gn  audio_server_balance_fuzzer.cpp  audio_server_fuzzer.cpp  audio_server_mono_fuzzer.cpp
test/fuzztest/audioserverbalance_fuzzer/: BUILD.gn  audio_server_balance_fuzzer.cpp
test/fuzztest/audiostreamcollector_fuzzer/: BUILD.gn  audio_stream_collector_fuzzer.cpp
test/moduletest/audiopolicy/: BUILD.gn
test/policy_test/: BUILD.gn
test/policy_test/include/: audio_policy_unit_test.h
test/policy_test/src/: audio_policy_unit_test.cpp
test/resource/audio_renderer/: ohos_test.xml
test/stream_test/include/: audio_stream_unit_test.h
test/stream_test/src/: audio_stream_unit_test.cpp
test/unittest/capturer_test/: BUILD.gn
test/unittest/group_manager_test/: BUILD.gn
test/unittest/manager_test/: BUILD.gn
test/unittest/opensles_capture_test/: BUILD.gn
test/unittest/opensles_test/: BUILD.gn
test/unittest/policy_test/: BUILD.gn
test/unittest/renderer_test/: BUILD.gn
test/unittest/routing_manager_test/: BUILD.gn
test/unittest/stream_manager_test/: BUILD.gn
test/unittest/stream_test/: BUILD.gn
test/unittest/volume_change_test/: BUILD.gn
(+1269 files in other folders)
