# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  audio_framework_feature_dtmf_tone = true
  audio_framework_feature_opensl_es = true

  multimedia_audio_framework_hdi_audio_client =
      "//drivers/peripheral/audio/hal/hdi_binder/proxy:hdi_audio_client"
  ipc_dir =
      "//foundation/communication/ipc/interfaces/innerkits/ipc_single/include"

  multimedia_audio_framework_pulse_audio = "//third_party/pulseaudio/include"

  multimedia_audio_framework_pulse_audio_src = "//third_party/pulseaudio/src"

  multimedia_audio_framework_drivers =
      "//drivers/peripheral/audio/interfaces/include/"

  multimedia_distributed_audio =
      "//foundation/distributedhardware/distributed_audio"
}

audio_fwk_path = "//foundation/multimedia/audio_framework"
drivers_audio_path = "//drivers/peripheral/audio"
daudio_path = "//foundation/distributedhardware/distributed_audio"
third_party_path = "//third_party"
histreamer_ext_dir = "//foundation/multimedia/histreamer_ext"

fwk_native_hdiadapter_path = "${audio_fwk_path}/frameworks/native/hdiadapter"
if ("${product_name}" == "m40") {
  close_source_flag = true
} else {
  close_source_flag = false
}
