# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("audio_unit_test") {
  testonly = true

  deps = [
    "unittest/capturer_test:audio_capturer_unit_test",
    "unittest/group_manager_test:audio_group_manager_unit_test",
    "unittest/manager_test:audio_manager_unit_test",
    "unittest/opensles_capture_test:audio_opensles_capture_unit_test",
    "unittest/opensles_test:audio_opensles_unit_test",
    "unittest/policy_test:audio_policy_unit_test",
    "unittest/renderer_test:audio_renderer_unit_test",
    "unittest/stream_manager_test:audio_stream_manager_unit_test",
    "unittest/stream_test:audio_stream_unit_test",
    "unittest/volume_change_test:audio_volume_change_unit_test",
    "//foundation/multimedia/audio_framework/services/audio_service/test/unittest:audio_balance_test",
  ]
}

group("audio_module_test") {
  testonly = true

  deps = [ "moduletest/audiopolicy:audio_policy_module_test" ]
}

group("audio_fuzz_test") {
  testonly = true

  deps = [
    "fuzztest/audiomanager_fuzzer:fuzztest",
    "fuzztest/audiopolicy_fuzzer:fuzztest",
    "fuzztest/audiopolicyanother_fuzzer:fuzztest",
    "fuzztest/audioserver_fuzzer:fuzztest",
    "fuzztest/audioserverbalance_fuzzer:fuzztest",
    "fuzztest/audiostreamcollector_fuzzer:fuzztest",
  ]
}
